Java 19 and 20 - Scoped VAlue, Structured Concurrency, Sequenced Collection