@@ -5,6 +5,12 @@ plugins {
 group = "org.igorborba"
 version = "1.0-SNAPSHOT"
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -16,4 +22,12 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+}
+
+// enable preview features of Java
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
 }
